syntax = "proto3";
package com.epam.esm;

import "google/protobuf/timestamp.proto";
import "com/epam/esm/tag_list.proto";

message GiftCertificate {
  string name = 1;
  string description = 2;
  int32 duration = 3;
  double price = 4;
  google.protobuf.Timestamp create_date = 5;
  google.protobuf.Timestamp last_updated_date = 6;
  ListOfTags tag_list = 7;
}

message CreateGiftCertificateRequest {
  GiftCertificate gift_certificate = 1;
}
message CreateGiftCertificateResponse {
  GiftCertificate gift_certificate = 1;
}

message GetByIdGiftCertificateRequest {
  string gift_certificate_id = 1;
}
message GetByIdGiftCertificateResponse {
  GiftCertificate gift_certificate = 1;
}

message DeleteByIdGiftCertificateRequest {
  string gift_certificate_id = 1;
}
message DeleteByIdGiftCertificateResponse {
}
message UpdateGiftCertificateRequest {
  string id = 1;
  GiftCertificate gift_certificate = 2;
}
message UpdateGiftCertificateResponse {
  GiftCertificate gift_certificate = 1;
}

