syntax = "proto3";
package com.epam.esm.grpcService;

import "com/epam/esm/gift_certificate.proto";

service GiftCertificateKafkaService {
  rpc createWithKafka (stream CreateGiftCertificateRequest) returns (stream CreateGiftCertificateResponse) {}
}
